# 2gis-tsk

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
task/: arguments_parser.cpp  arguments_parser.hpp  checksum.cpp  checksum.hpp  circular_char_buffer.hpp  commands.hpp  count_words.cpp  count_words.hpp  count_words_naive.hpp  count_words_rabin_karp.hpp  main.cpp  result.hpp
tests/: checksum_tests.cpp  main.cpp  result_tests.cpp  test_framework.hpp  unit_test_framework.hpp
tests/cases/: checksum.cpp  circular_char_buffer.cpp  count_words.cpp  result.cpp
